syntax = "proto3";
package wuqing;
option go_package = "./wuqing";

service Hello{
    rpc SayHello(HelloRequest) returns (HelloResponse) {}
}

message HelloRequest{
    string name = 1;
}

message HelloResponse{
    string message = 1;
}